# cultureid-global-localisation

./: CMakeLists.txt  package.xml
configuration_files/: pipeline_general.yaml
experiments_logs/: execution_time  global_pose  map  num_particles
include/cultureid_global_localisation_logger_node/: cultureid_global_localisation_logger.h
include/cultureid_global_localisation_node/: .cultureid_global_localisation.h.swp  cultureid_global_localisation.h
launch/: avanti.launch  cultureid_global_localisation.launch  cultureid_global_localisation_logger.launch
src/cultureid_global_localisation_logger_node/: CMakeLists.txt  cultureid_global_localisation_logger.cpp  cultureid_global_localisation_logger_node.cpp
src/cultureid_global_localisation_node/: .cultureid_global_localisation.cpp.swp  CMakeLists.txt  cultureid_global_localisation.cpp  cultureid_global_localisation_node.cpp
tmp/: real_scan.m  virtual_scan.m
